# dart-lsp-mcp

./: .gitignore  .mcp.json  HOW_TO_INTEGRATE_INTO_YOUR_PROJECT.md  MCP.md  README.md  capabilities.bat  check.bat  definition.bat  hover.bat  pyproject.toml  references.bat  search.bat  start.bat  symbols.bat  test_project.bat
src/dart_lsp_watcher/: __init__.py  api.py  diagnostics.py  file_handler.py  lsp_client.py  main.py  mcp_server.py
src/dart_lsp_watcher/config/: __init__.py  config_file.py  constants.py  settings.py
src/dart_lsp_watcher/utils/: __init__.py
test_project/: pubspec.yaml
test_project/lib/: main.dart
tests/: __init__.py
